# pasportaservo

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .hgignore  .pep8speaks.yml  .pre-commit-config.yaml  .stylelintrc.yaml  .travis.yml  AUTHORS  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  INSTALL.md  LICENSE.md  Pipfile  README.md  docker-compose.yaml  fabfile.py  fabric.yaml  instalilo.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker-build.yaml  quality.yaml  shiftleft-analysis.yml
Mockups/: accomodation-login.html  accomodation-logout.html  index.html  search.html
Mockups/css/: pasportaservo.css
blog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20171030_1716.py  0003_annotated_content_field.py
blog/tests/: factories.py  test_blog_form.py  test_blog_models.py  test_blog_views.py
book/: README.md  apps.py  urls.py  views.py
book/templatetags/: latex.py
chat/: admin.py  apps.py  moderation.py
chat/migrations/: 0001_initial.py  0002_scheduled_reminders.py
chat/tests/: factories.py  test_admin.py  test_moderation.py
core/: __init__.py  admin.py  apps.py  auth.py  context_processors.py  fields.py  forms.py  hooks.py  managers.py  middleware.py  mixins.py  models.py  urls.py  utils.py  views.py  widgets.py
core/admin/: __init__.py  admin.py  filters.py
core/migrations/: 0001_initial.py  0002_auto_20171030_1716.py  0003_update_min_age.py  0004_agreement_model.py  0005_agreement_withdrawal.py  0005_geo_api_keys.py  0006_geo_api_keys.py  0007_policy_as_flatpage.py  0008_range_int_field.py  0009_update_policy_fa_icons.py  0010_userbrowser_model.py  0011_update_userbrowser_fields.py  0012_geo_api_keys_as_json.py  0013_policy_model.py  0014_userbrowser_numeric_versions.py  0015_flag_switch_sample_models.py
core/templates/: base.html
core/templatetags/: breach.py  cdn.py  domain.py  expression.py  url_utils.py  utils.py  variable.py
etc/: .bash_profile  config.env.example  gunicorn_config.py.example  postactivate.example
etc/nginx/: nginx.conf  prod.conf  staging.conf  www.pasportaservo.conf  www.pasportaservo.org.conf
etc/supervisor/: prod.conf  staging.conf
hosting/: __init__.py  admin.py  admin_utils.py  apps.py  countries.py  fields.py  filters.py  forms.py  gravatar.py  managers.py  mixins.py  models.py  querysets.py  serializers.py  test_urls.py  test_validators.py  urls.py  utils.py  validators.py  views.py  widgets.py
hosting/admin/: admin.py  filters.py  forms.py  mixins.py  widgets.py
hosting/filters/: places.py  search.py
hosting/forms/: __init__.py  familymembers.py  listing.py  phones.py  places.py  profiles.py  visibility.py
hosting/migrations/: 0001_initial.py  0002_auto_20140924_0745.py  0003_auto_20141010_1056.py  0004_auto_20141011_1737.py  0005_auto_20141011_2246.py  0006_auto_20141012_1022.py  0007_profile_website2.py  0008_auto_20141012_1735.py  0009_auto_20141013_1704.py  0010_auto_20141018_2237.py  0011_auto_20141030_1201.py  0012_auto_20141110_1646.py  0013_place_family_members.py  0014_remove_profile_places.py  0015_remove_booked_place.py  0016_auto_20141123_2151.py  0017_auto_20160921_1245.py  0018_auto_20160930_1756.py  0019_auto_20161001_1021.py  0020_auto_20161002_1255.py  0020_confirmed_on.py  0021_abstract_model.py  0021_update_availability.py  0022_confirmed_on.py  0023_abstract_model.py  0024_auto_20161019_2256.py  0025_auto_20161019_2323.py  0026_create_country_groups.py  0027_profile_names_inversed.py  0028_adding_validators.py  0029_tracking_fields_using_datetime.py  0030_remove_boolean_tracking_fields.py  0031_add_profile_email.py  0032_refrazigo.py  0033_condition_latex.py  0034_auto_20170218_1339.py  0035_place_blocking_dates.py  0037_add_countrygroup_proxy_model.py  0037_auto_20170408_1510.py  0038_add_approver_proxy_model.py  (+35 more)
hosting/templates/: base.html
hosting/templatetags/: geoformat.py  privacy.py  profile.py
hosting/views/: __init__.py  familymembers.py  listing.py  mixins.py  phones.py  places.py  profiles.py  verification.py
links/: apps.py  urls.py  utils.py  views.py
maps/: __init__.py  apps.py  data.py  urls.py  utils.py  views.py  widgets.py
maps/migrations/: 0001_plottable_place_proxy_model.py
maps/static/: world-map.js
pages/: urls.py  views.py
pages/migrations/: 0001_t-and-c_as_flatpage.py
pasportaservo/: __init__.py  admin.py  apps.py  debug.py  forms.py  settings.py  urls.py  views.py  wsgi.py
pasportaservo/settings/: __init__.py  base.py  dev.py  dev_batisteo.py  dev_default.py  dev_etenil.py  prod.py  secrets_tpl.py  sentry.py  staging.py  testing.py  testing_local.py
pasportaservo/static/: 404.html
pasportaservo/templates/: 200.html  403.html  403_csrf.html  404.html  500.html  message.html
requirements/: base.txt  dev.txt
shop/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_add_donation_product.py
shop/tests/: factories.py
tests/: __init__.py  assertions.py  constants.py  factories.py  test_admin.py  test_filters.py  test_integration.py  test_utils.py  test_validators.py  test_views.py
tests/context_processors/: test_ctx_processors.py
tests/forms/: test_admin_forms.py  test_auth_forms.py  (+11 more)
tools/: countries.py  getters.py  migration.py  migration_family_members.py  migration_profileset_to_familymembers.py
(+393 files in other folders)
