[project]
name = "pasportaservo"
version = "0.1.0"
description = 'Pasporta Servo estas senpaga tutmonda gastiga servo.'
requires-python = ">=3.10"
license.file = "LICENSE"
readme = "README.md"
urls.documentation = "https://github.com/tejoesperanto/pasportaservo/blob/master/README.md"
urls.issues = "https://github.com/tejoesperanto/pasportaservo/issues"
urls.source = "https://github.com/tejoesperanto/pasportaservo"

keywords = [
    "django", "postgresql", "saas", "pasporta", "servo", "esperanto", "tejo", "zamenhof",
    "tutmonda", "junulara", "organizo", "lingvo", "interparolo", "internacia", "loĝado", "vojaĝi", "gastigo", "mapo", "retejo",
    "passport", "service", "global", "youth", "orginization", "language", "exchange", "international", "lodging", "travel", "hospitality", "map", "website", "online",
    # TODO:FAROTE: Ĉu pli da lingvaj tradukoj aldonendas? Ebla nur la denaskaj lingvoj de niaj kontribuantoj, aŭ eble nur la plej vidataj je GitHub.
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

authors = [
    { name = "TEJO Esperanto", email = "oficejo@tejo.org" },
]

maintainers = [
    { name = "Meir", email = "interDist@users.noreply.github.com" },
    { name = "Baptiste Darthenay", email = "baptiste@darthenay.fr" },
    { name = "Etenil", email = "dev@etenil.net" },
    { name = "Chloe Shetreet", email = "CourteousCoder@gmail.com" },
    { name = "Salman Mohammadi", email = "salman@ubuntu.ir" },
]

dependencies = [
    "awesome-slugify==1.6.5",
    "commonmark==0.9.1",
    "csscompressor==0.9.5",
    "django-anymail[postmark]==10.3",
    "django-braces==1.14.0",
    "django-compressor==2.4",
    "django-countries==7.3.2",
    "django-crispy-forms==1.12.0",
    "django-dnt==0.2.0",
    "django-el-pagination==3.3.0",
    "django-extensions==3.1.1",
    "django-filter==22.1",
    "django-geojson==3.1.0",
    "django-logentry-admin==1.1.0",
    "django-phonenumber-field==5.0.0",
    "django-postman==4.3.0",
    "django-sass-processor==0.8.2",
    "django-simplemde==0.1.3",
    "django-solo==1.1.5",
    "django-statici18n==2.0.1",
    "django==3.2.25",
    "djangocodemirror==2.1.0",
    "faker==12.1.0",
    "fontawesomefree==6.0.0b2",
    "geocoder==1.38.1",
    "geojson==2.5.0",
    "gql[requests]==3.1.0",
    "itsdangerous==1.1.0",
    "libsass==0.20.1",
    "packvers==21.5",
    "phonenumberslite==8.12.19",
    "pillow==10.3.0",
    "psycopg2==2.8.6",
    "pymemcache==3.5.2",
    "requests==2.27.1",
    "rstr==3.0.0",
    "sentry-sdk>=1.18",
    "user-agents==2.2.0",
    "wheel==0.44.0",
]

optional-dependencies.mail = [
    # TODO:FAROTE: Testi tion ĉi.
    "maildump>=1.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4==4.12.2",
    "bpython==0.21",
    "coverage==7.3.0",
    "django-debug-toolbar==3.6.0",
    "django-webtest==1.9.10",
    "fabric==2.7.1",
    "factory-boy==3.2.0",
    "flake8==6.1.0",
    "isort==5.12.0",
    "pre-commit==3.3.3",
    "pyquery==2.0.0",
    "sqlparse>=0.2.4",
    "uv>=0.5.1",
]

# TODO:FAROTE Konsideri kiel unuigi la agordojn kaj skriptojn de setup.cf, fabfile.py, kaj pyproject.toml ĉi tien.
